// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`class prototypes > prototype properties of Canonizer 1`] = `
[
  "constructor",
  "getCanMolecule",
  "getEncodedCoordinates",
  "getEncodedMapping",
  "getFinalRank",
  "getGraphAtoms",
  "getGraphIndexes",
  "getIDCode",
  "getSymmetryRank",
  "getSymmetryRanks",
  "hasCIPParityDistinctionProblem",
  "invalidateCoordinates",
  "normalizeEnantiomer",
  "setParities",
]
`;

exports[`class prototypes > prototype properties of CanonizerUtil 1`] = `
[
  "constructor",
]
`;

exports[`class prototypes > prototype properties of ConformerGenerator 1`] = `
[
  "constructor",
  "getConformerCount",
  "getNextConformerAsMolecule",
  "getOneConformerAsMolecule",
  "getPotentialConformerCount",
  "initializeConformers",
]
`;

exports[`class prototypes > prototype properties of DrugScoreCalculator 1`] = `
[
  "constructor",
]
`;

exports[`class prototypes > prototype properties of DruglikenessPredictor 1`] = `
[
  "assessDruglikeness",
  "constructor",
  "getDetail",
  "getDruglikenessString",
]
`;

exports[`class prototypes > prototype properties of ForceFieldMMFF94 1`] = `
[
  "constructor",
  "getTotalEnergy",
  "minimise",
  "size",
]
`;

exports[`class prototypes > prototype properties of Molecule 1`] = `
[
  "_toSVG",
  "addImplicitHydrogens",
  "addMissingChirality",
  "changeCustomLabelPosition",
  "constructor",
  "copyMoleculeByAtoms",
  "ensureHelperArrays",
  "getAllAtoms",
  "getAllBonds",
  "getAtomCustomLabel",
  "getAtomLabel",
  "getAtomMapNo",
  "getAtomQueryFeaturesObject",
  "getAtomX",
  "getAtomY",
  "getAtomZ",
  "getAtomicNo",
  "getBondOrder",
  "getBondQueryFeaturesObject",
  "getCanonizedIDCode",
  "getChiralText",
  "getCompactCopy",
  "getDiastereotopicAtomIDs",
  "getFinalRanks",
  "getIDCode",
  "getIDCodeAndCoordinates",
  "getIDCoordinates",
  "getMolecularFormula",
  "getNextCustomAtomLabel",
  "getOCL",
  "getRingCollection",
  "getRingSet",
  "inventCoordinates",
  "isDelocalizedBond",
  "isFragment",
  "removeExplicitHydrogens",
  "setAtomCustomLabel",
  "setAtomMapNo",
  "setAtomQueryFeature",
  "setAtomX",
  "setAtomY",
  "setAtomZ",
  "setAtomicNo",
  "setFragment",
  "stripStereoInformation",
  "toIsomericSmiles",
  "toMolfile",
  "toMolfileV3",
  "toSVG",
  "toSmarts",
  "toSmiles",
]
`;

exports[`class prototypes > prototype properties of MoleculeProperties 1`] = `[]`;

exports[`class prototypes > prototype properties of Reaction 1`] = `
[
  "addCatalyst",
  "addCatalystAt",
  "addProduct",
  "addProductAt",
  "addReactant",
  "addReactantAt",
  "clear",
  "clone",
  "constructor",
  "getAverageBondLength",
  "getCatalyst",
  "getCatalysts",
  "getHighestMapNo",
  "getMergedCopy",
  "getMolecule",
  "getMolecules",
  "getName",
  "getProduct",
  "getProducts",
  "getReactant",
  "getReactants",
  "getReactionCenterMapNos",
  "isEmpty",
  "isFragment",
  "isPerfectlyMapped",
  "isReactionLayoutRequired",
  "removeCatalysts",
  "setFragment",
  "setName",
  "toRxn",
  "toRxnV3",
  "toSmiles",
  "validateMapping",
]
`;

exports[`class prototypes > prototype properties of ReactionEncoder 1`] = `
[
  "constructor",
]
`;

exports[`class prototypes > prototype properties of Reactor 1`] = `
[
  "constructor",
  "getProducts",
  "setReactant",
]
`;

exports[`class prototypes > prototype properties of SDFileParser 1`] = `
[
  "constructor",
  "getField",
  "getFieldData",
  "getFieldNames",
  "getMolecule",
  "getNextFieldData",
  "getNextMolFile",
  "next",
]
`;

exports[`class prototypes > prototype properties of SSSearcher 1`] = `
[
  "constructor",
  "findFragmentInMolecule",
  "getMatchList",
  "isFragmentInMolecule",
  "setFragment",
  "setMol",
  "setMolecule",
]
`;

exports[`class prototypes > prototype properties of SSSearcherWithIndex 1`] = `
[
  "constructor",
  "createIndex",
  "isFragmentInMolecule",
  "setFragment",
  "setMolecule",
]
`;

exports[`class prototypes > prototype properties of SmilesParser 1`] = `
[
  "constructor",
  "getSmartsWarning",
  "parseMolecule",
  "setRandomSeed",
]
`;

exports[`class prototypes > prototype properties of ToxicityPredictor 1`] = `
[
  "assessRisk",
  "constructor",
  "getDetail",
]
`;

exports[`class prototypes > prototype properties of Transformer 1`] = `
[
  "applyTransformation",
  "constructor",
  "setMolecule",
]
`;

exports[`class prototypes > prototype properties of Util 1`] = `
[
  "constructor",
]
`;

exports[`class prototypes > static properties of Canonizer 1`] = `[]`;

exports[`class prototypes > static properties of CanonizerUtil 1`] = `
[
  "BACKBONE",
  "NORMAL",
  "NOSTEREO",
  "NOSTEREO_TAUTOMER",
  "TAUTOMER",
  "getIDCode",
]
`;

exports[`class prototypes > static properties of ConformerGenerator 1`] = `[]`;

exports[`class prototypes > static properties of DrugScoreCalculator 1`] = `
[
  "calculate",
]
`;

exports[`class prototypes > static properties of DruglikenessPredictor 1`] = `[]`;

exports[`class prototypes > static properties of ForceFieldMMFF94 1`] = `[]`;

exports[`class prototypes > static properties of Molecule 1`] = `
[
  "CANONIZER_ASSIGN_PARITIES_TO_TETRAHEDRAL_N",
  "CANONIZER_CONSIDER_DIASTEREOTOPICITY",
  "CANONIZER_CONSIDER_ENANTIOTOPICITY",
  "CANONIZER_CONSIDER_STEREOHETEROTOPICITY",
  "CANONIZER_COORDS_ARE_3D",
  "CANONIZER_CREATE_PSEUDO_STEREO_GROUPS",
  "CANONIZER_CREATE_SYMMETRY_RANK",
  "CANONIZER_DISTINGUISH_RACEMIC_OR_GROUPS",
  "CANONIZER_ENCODE_ATOM_CUSTOM_LABELS",
  "CANONIZER_ENCODE_ATOM_CUSTOM_LABELS_WITHOUT_RANKING",
  "CANONIZER_ENCODE_ATOM_SELECTION",
  "CANONIZER_NEGLECT_ANY_STEREO_INFORMATION",
  "CANONIZER_TIE_BREAK_FREE_VALENCE_ATOMS",
  "cAtomLabel",
  "cAtomQFAny",
  "cAtomQFAromState",
  "cAtomQFAromStateBits",
  "cAtomQFAromStateShift",
  "cAtomQFAromatic",
  "cAtomQFCharge",
  "cAtomQFChargeBits",
  "cAtomQFChargeShift",
  "cAtomQFDepictedFeatures",
  "cAtomQFENeighbourBits",
  "cAtomQFENeighbourShift",
  "cAtomQFENeighbours",
  "cAtomQFExcludeGroup",
  "cAtomQFFlatNitrogen",
  "cAtomQFHeteroAromatic",
  "cAtomQFHydrogen",
  "cAtomQFHydrogenBits",
  "cAtomQFHydrogenShift",
  "cAtomQFIsNotStereo",
  "cAtomQFIsStereo",
  "cAtomQFMatchStereo",
  "cAtomQFMoreNeighbours",
  "cAtomQFNarrowing",
  "cAtomQFNeighbourBits",
  "cAtomQFNeighbourShift",
  "cAtomQFNeighbours",
  "cAtomQFNewRingSize",
  "cAtomQFNewRingSizeBits",
  "cAtomQFNewRingSizeShift",
  "cAtomQFNoMoreNeighbours",
  "cAtomQFNoOfBits",
  "cAtomQFNot0ENeighbours",
  "cAtomQFNot0Hydrogen",
  "cAtomQFNot0Neighbours",
  "cAtomQFNot0PiElectrons",
  "cAtomQFNot1ENeighbour",
  "cAtomQFNot1Hydrogen",
  "cAtomQFNot1Neighbour",
  "cAtomQFNot1PiElectron",
  "cAtomQFNot2ENeighbours",
  "cAtomQFNot2Hydrogen",
  "cAtomQFNot2Neighbours",
  "cAtomQFNot2PiElectrons",
  "cAtomQFNot2RingBonds",
  "cAtomQFNot3ENeighbours",
  "cAtomQFNot3Hydrogen",
  "cAtomQFNot3Neighbours",
  "cAtomQFNot3RingBonds",
  "cAtomQFNot4ENeighbours",
  "cAtomQFNot4Neighbours",
  "cAtomQFNot4RingBonds",
  "cAtomQFNotAromatic",
  "cAtomQFNotChain",
  "cAtomQFNotCharge0",
  "cAtomQFNotChargeNeg",
  "cAtomQFNotChargePos",
  "cAtomQFPiElectronBits",
  "cAtomQFPiElectronShift",
  "cAtomQFPiElectrons",
  "cAtomQFRingSize0",
  "cAtomQFRingSize3",
  "cAtomQFRingSize4",
  "cAtomQFRingSize5",
  "cAtomQFRingSize6",
  "cAtomQFRingSize7",
  "cAtomQFRingSizeLarge",
  "cAtomQFRingState",
  "cAtomQFRingStateBits",
  "cAtomQFRingStateShift",
  "cAtomQFRxnParityBits",
  "cAtomQFRxnParityHint",
  "cAtomQFRxnParityInvert",
  "cAtomQFRxnParityRacemize",
  "cAtomQFRxnParityRetain",
  "cAtomQFRxnParityShift",
  "cAtomQFSimpleFeatures",
  "cAtomQFSmallRingSize",
  "cAtomQFSmallRingSizeBits",
  "cAtomQFSmallRingSizeShift",
  "cAtomQFStereoState",
  "cAtomQFStereoStateBits",
  "cAtomQFStereoStateShift",
  "cBondQFAllFeatures",
  "cBondQFAromState",
  "cBondQFAromStateBits",
  "cBondQFAromStateShift",
  "cBondQFAromatic",
  "cBondQFBondTypes",
  "cBondQFBondTypesBits",
  "cBondQFBondTypesShift",
  "cBondQFBridge",
  "cBondQFBridgeBits",
  "cBondQFBridgeMin",
  "cBondQFBridgeMinBits",
  "cBondQFBridgeMinShift",
  "cBondQFBridgeShift",
  "cBondQFBridgeSpan",
  "cBondQFBridgeSpanBits",
  "cBondQFBridgeSpanShift",
  "cBondQFDelocalized",
  "cBondQFDepictedFeatures",
  "cBondQFDouble",
  "cBondQFMatchFormalOrder",
  "cBondQFMatchStereo",
  "cBondQFMetalLigand",
  "cBondQFNarrowing",
  "cBondQFNoOfBits",
  "cBondQFNotAromatic",
  "cBondQFNotRing",
  "cBondQFQuadruple",
  "cBondQFQuintuple",
  "cBondQFRareBondTypes",
  "cBondQFRareBondTypesBits",
  "cBondQFRareBondTypesShift",
  "cBondQFRing",
  "cBondQFRingSize",
  "cBondQFRingSizeBits",
  "cBondQFRingSizeShift",
  "cBondQFRingState",
  "cBondQFRingStateBits",
  "cBondQFRingStateShift",
  "cBondQFSimpleFeatures",
  "cBondQFSingle",
  "cBondQFTriple",
  "cESRTypeAbs",
  "cESRTypeAnd",
  "cESRTypeOr",
  "cHelperAll",
  "cHelperBitCIP",
  "cHelperBitIncludeNitrogenParities",
  "cHelperBitNeighbours",
  "cHelperBitParities",
  "cHelperBitRings",
  "cHelperBitRingsSimple",
  "cHelperBitSymmetrySimple",
  "cHelperBitSymmetryStereoHeterotopicity",
  "cHelperBitsStereo",
  "cHelperCIP",
  "cHelperNeighbours",
  "cHelperNone",
  "cHelperParities",
  "cHelperRings",
  "cHelperRingsSimple",
  "cHelperSymmetrySimple",
  "cHelperSymmetryStereoHeterotopicity",
  "cMaxAtomicNo",
  "cPseudoAtomA",
  "cPseudoAtomAttachmentPoint",
  "cPseudoAtomPolymer",
  "cPseudoAtomR",
  "cPseudoAtomX",
  "cPseudoAtomsAGroups",
  "cPseudoAtomsAll",
  "cPseudoAtomsAminoAcids",
  "cPseudoAtomsHydrogenIsotops",
  "cPseudoAtomsRGroups",
  "fromIDCode",
  "fromMolfile",
  "fromMolfileWithAtomMap",
  "fromSmiles",
  "fromText",
  "getAtomicNoFromLabel",
]
`;

exports[`class prototypes > static properties of MoleculeProperties 1`] = `[]`;

exports[`class prototypes > static properties of Reaction 1`] = `
[
  "create",
  "fromMolecules",
  "fromRxn",
  "fromSmiles",
]
`;

exports[`class prototypes > static properties of ReactionEncoder 1`] = `
[
  "CATALYST_DELIMITER",
  "INCLUDE_ALL",
  "INCLUDE_CATALYSTS",
  "INCLUDE_COORDS",
  "INCLUDE_DEFAULT",
  "INCLUDE_DRAWING_OBJECTS",
  "INCLUDE_MAPPING",
  "INCLUDE_RXN_CODE_ONLY",
  "MOLECULE_DELIMITER",
  "OBJECT_DELIMITER",
  "PRODUCT_IDENTIFIER",
  "RETAIN_REACTANT_AND_PRODUCT_ORDER",
  "decode",
  "encode",
]
`;

exports[`class prototypes > static properties of Reactor 1`] = `[]`;

exports[`class prototypes > static properties of SDFileParser 1`] = `[]`;

exports[`class prototypes > static properties of SSSearcher 1`] = `[]`;

exports[`class prototypes > static properties of SSSearcherWithIndex 1`] = `
[
  "bitCount",
  "getHexStringFromIndex",
  "getIndexFromHexString",
  "getKeyIDCode",
  "getSimilarityAngleCosine",
  "getSimilarityTanimoto",
]
`;

exports[`class prototypes > static properties of SmilesParser 1`] = `[]`;

exports[`class prototypes > static properties of ToxicityPredictor 1`] = `
[
  "RISK_HIGH",
  "RISK_LOW",
  "RISK_NO",
  "RISK_UNKNOWN",
  "TYPE_IRRITANT",
  "TYPE_MUTAGENIC",
  "TYPE_REPRODUCTIVE_EFFECTIVE",
  "TYPE_TUMORIGENIC",
]
`;

exports[`class prototypes > static properties of Transformer 1`] = `[]`;

exports[`class prototypes > static properties of Util 1`] = `
[
  "getHoseCodesFromDiastereotopicID",
]
`;

exports[`top-level API 1`] = `
[
  "Canonizer",
  "CanonizerUtil",
  "ConformerGenerator",
  "DrugScoreCalculator",
  "DruglikenessPredictor",
  "ForceFieldMMFF94",
  "Molecule",
  "MoleculeProperties",
  "Reaction",
  "ReactionEncoder",
  "Reactor",
  "SDFileParser",
  "SSSearcher",
  "SSSearcherWithIndex",
  "SmilesParser",
  "ToxicityPredictor",
  "Transformer",
  "Util",
]
`;
